packages/java/src/main/resources/natives/macos-arm64/include/liter_llm.h

typedef uint64_t LITERLLMAlefHandle;
/**
 * Return the last error code (0 means no error).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * This function does not allocate and returns no owned pointer.
 */
int32_t literllm_last_error_code(void);
/**
 * Return the last error message. The pointer is borrowed and valid until the next FFI call on this thread.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * The returned pointer is borrowed from thread-local storage and must NOT be freed.
 */
const char *literllm_last_error_context(void);
/**
 * Free a string previously returned by this library.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void literllm_free_string(char *ptr);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_retrieve_file(LITERLLMAlefHandle this_,
                                                         const char *file_id);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_delete_file(LITERLLMAlefHandle this_,
                                                       const char *file_id);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_list_files(LITERLLMAlefHandle this_,
                                                      LITERLLMAlefHandle query);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
int32_t literllm_default_client_file_content(LITERLLMAlefHandle this_,
                                             const char *file_id,
                                             uint8_t **out_ptr,
                                             uintptr_t *out_len,
                                             uintptr_t *out_cap);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_create_batch(LITERLLMAlefHandle this_,
                                                        LITERLLMAlefHandle req);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_retrieve_batch(LITERLLMAlefHandle this_,
                                                          const char *batch_id);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_list_batches(LITERLLMAlefHandle this_,
                                                        LITERLLMAlefHandle query);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_cancel_batch(LITERLLMAlefHandle this_,
                                                        const char *batch_id);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_create_response(LITERLLMAlefHandle this_,
                                                           LITERLLMAlefHandle req);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_retrieve_response(LITERLLMAlefHandle this_,
                                                             const char *response_id);
/**
 * \note SAFETY: Caller must ensure all pointer arguments are valid or null. Returned pointers must be
 * freed with the appropriate free function.
 */
LITERLLMAlefHandle literllm_default_client_cancel_response(LITERLLMAlefHandle this_,
                                                           const char *response_id);