packages/csharp/LiterLlm/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_file")]
    internal static extern IntPtr DefaultClientRetrieveFile(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string fileId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_delete_file")]
    internal static extern IntPtr DefaultClientDeleteFile(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string fileId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_files")]
    internal static extern IntPtr DefaultClientListFiles(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string query
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_file_content")]
    internal static extern IntPtr DefaultClientFileContent(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string fileId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_batch")]
    internal static extern IntPtr DefaultClientCreateBatch(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_batch")]
    internal static extern IntPtr DefaultClientRetrieveBatch(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string batchId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_batches")]
    internal static extern IntPtr DefaultClientListBatches(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string query
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_cancel_batch")]
    internal static extern IntPtr DefaultClientCancelBatch(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string batchId
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_response")]
    internal static extern IntPtr DefaultClientCreateResponse(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_retrieve_response")]
    internal static extern IntPtr DefaultClientRetrieveResponse(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string id
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_cancel_response")]
    internal static extern IntPtr DefaultClientCancelResponse(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string id
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_free_string")]
    internal static extern void FreeString(IntPtr ptr);
}
